--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,74 @@
-<!DOCTYPE html>
-<html>
 <head>
-	<title>Milka a Janik</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+<link rel="stylesheet" type="text/css" href="main2.css">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+<title>Hello World!</title>
 </head>
+
 <body>
-<h1>Ahoj</h1>
+	<header class="container">
+	<div class="row">
+<h1 class="col-sm-12" style="color:white; text-align: center; font-size:55px;">Hello World! </h1>
+<!--
+<nav class="col-sm-4 text-right">
+<p>About me</p>
+<p>My work</p>
+<p>Contact</p>
+</nav>
+-->
+	</div>
+	<section class="jumbotron">
+	<div class="container">
+	<p style="text-align:left;">Welcome to my very first site. This site was done by myself in Bootstrap.<br> I started to learn HTML just two months ago. I am thankfull to <a href="https://www.codecademy.com">codeacademy</a>, <a href="http://freecodecamp.com" target="_blank">freeCodeCamp</a> and other online e-learning platforms for helping me to dip my feet into programming. As you can see there is not much content and clicking on my site right now because I am still working on it. Please come back soon.
+</p>
+	
+	</div>
+	</div>
+	</section>
+	</header>
+
+	<section class="container">
+	<div class="row">
+	<figure class="col-sm-12 text-center">
+
+	<p style="color:white; font-size: 18px;">When I am not learning I look like this...</p>
+
+	<img src="http://res.cloudinary.com/dqvtaprpp/image/upload/v1462197063/thumb_IMG_2179_1024_kjj8cf.jpg" class="img-circle">
+
+	</div>
+	</section>
+
+<footer class="container">
+    <div class="row">
+      <p class="col-sm-4 text-left" style="color:white;">&copy;2016 Milka</p>
+      <ul class="col-sm-8 text-right">
+        <li class="col-sm-1">
+        <a href="http://twitter.com/EmliaTr" target="_blank">
+          <img src="http://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg"></a>
+        </li>
+        <li class="col-sm-1">
+        <a href="http://www.instagram.com/emilia_k_t/" target="_blank"">
+          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram.svg" ></a>
+      </ul>
+    </div>
+  </footer>
+
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
